PE-2826: add default CSRF whitelist

--- a/src/main/resources/common.conf
+++ b/src/main/resources/common.conf
@@ -91,6 +91,8 @@ controllers {
 
 caching.allowedContentTypes = ["image/", "text/css", "application/javascript"]
 
+# default whitelist for CSRFExceptionsFilter
+csrfexceptions.whitelist = ["/ida/login", "/ssoin", "/contact/problem_reports"]
 
 microservice {
 
